--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +17,11 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  gap:10px;
+  margin: 0 20px;
+  padding-left: 0;
 }
 
 a {
@@ -22,4 +30,7 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin-right: auto;
+  margin-left:auto;
+  
 }
