--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+  /* adding flex to body to keep page height responsive */
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -16,6 +20,9 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  /* Adding padding */
+  padding:5px;
+  margin:0 20px;
 }
 
 input {
@@ -24,4 +31,41 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+/*Added style below this line*/
+ul {
+  list-style-type:none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding:10px 20px;
+}
+.footer {
+  background-color: #eeeeee;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  flex:1;
+  align-items: center;
+  padding: 200px;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
